--- a/netty-client-form/src/main/java/com/pb/client/form/ui/Login.form
+++ b/netty-client-form/src/main/java/com/pb/client/form/ui/Login.form
@@ -37,7 +37,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <text value="用户名"/>
             </properties>
           </component>
           <component id="c8a9e" class="javax.swing.JLabel" binding="pwd_lable">
@@ -45,7 +45,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <text value="密码"/>
             </properties>
           </component>
           <component id="88bb6" class="javax.swing.JButton" binding="login">
@@ -53,7 +53,7 @@
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Button"/>
+              <text value="登录"/>
             </properties>
           </component>
         </children>
