--- a/netty-client-form/src/main/java/com/pb/client/form/ui/SearchFriend.form
+++ b/netty-client-form/src/main/java/com/pb/client/form/ui/SearchFriend.form
@@ -29,7 +29,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Button"/>
+              <text value="搜索"/>
             </properties>
           </component>
           <component id="fd23b" class="javax.swing.JList" binding="search_result">
